[gd_scene load_steps=3 format=3 uid="uid://dbovci8t6ej4m"]

[ext_resource type="Texture2D" uid="uid://dxmphavlomx4g" path="res://Objects/Helicopter/helicopter-facing-left.png" id="1_n8sof"]
[ext_resource type="Script" path="res://Scenes/LevelObjectives/level_objectives.gd" id="1_pu78u"]

[node name="LevelObjectives" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.151146, 0.308725, 0.304382, 1)

[node name="layout" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("1_pu78u")
metadata/_edit_group_ = true

[node name="CurrentLevel" type="Label" parent="layout"]
layout_mode = 2
text = "LEVEL 1"
horizontal_alignment = 1

[node name="LivesLeft" type="Label" parent="layout"]
layout_mode = 2
text = "3 x Lives"
horizontal_alignment = 1

[node name="PrisonersLeft" type="Label" parent="layout"]
layout_mode = 2
text = "3 x Prisoners"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(79, 52)
texture = ExtResource("1_n8sof")

[node name="NextSceneTimer" type="Timer" parent="."]
